[gd_scene load_steps=2 format=3 uid="uid://biqvrrje3obiu"]

[ext_resource type="Script" uid="uid://cwmj74ajxobnm" path="res://main.gd" id="1_nkxgi"]

[node name="Main" type="Node2D"]
script = ExtResource("1_nkxgi")

[node name="LoadButton" type="Button" parent="."]
offset_left = 3.0
offset_top = 19.0
offset_right = 129.0
offset_bottom = 57.0
text = "Load Save"

[node name="SaveButton" type="Button" parent="."]
offset_left = 3.0
offset_top = 63.0
offset_right = 129.0
offset_bottom = 99.0
text = "Write Save"

[node name="ChangeHealth" type="Button" parent="."]
offset_left = 5.0
offset_top = 123.0
offset_right = 129.0
offset_bottom = 154.0
text = "Change Health"

[node name="Panel" type="Panel" parent="."]
offset_left = 133.0
offset_top = 20.0
offset_right = 309.0
offset_bottom = 153.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 38.0
offset_right = 42.0
offset_bottom = 61.0
text = "Player Health :"

[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ChangeHealth" to="." method="_on_change_health_pressed"]
